Fixed Web-Viewer CSS for Scrollbar 0.5.12

--- a/css/mosh.css
+++ b/css/mosh.css
@@ -62,6 +62,11 @@ p {
   border: 1px solid white;
 }
 
+.mosh .window-content{
+  scrollbar-width: thin;
+  scrollbar-color: black #fff;
+}
+
 .mosh .white{
   color:white;
 }
